--- a/index.html
+++ b/index.html
@@ -8,34 +8,36 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #2c3e50;
-            color: #ecf0f1;
+            background-color: #1a1a2e;
+            color: #fff;
+            margin: 0;
+            padding: 0;
         }
-        #monster {
-            width: 200px;
-            cursor: pointer;
+        h1 {
+            margin-top: 20px;
+        }
+        #game-container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 20px;
+            padding: 20px;
+        }
+        #stats, #shop {
+            background: #162447;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
         #stats {
-            margin: 20px 0;
-        }
-        .button {
-            background-color: #3498db;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            margin: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .button:hover {
-            background-color: #2980b9;
+            width: 300px;
         }
         .health-bar {
             width: 300px;
             height: 20px;
             background-color: #e74c3c;
-            margin: 10px auto;
             border-radius: 10px;
+            margin: 10px auto;
             overflow: hidden;
         }
         .health-bar-inner {
@@ -44,21 +46,63 @@
             width: 100%;
             transition: width 0.2s;
         }
+        #monster {
+            width: 250px;
+            cursor: pointer;
+        }
+        #shop h2 {
+            margin-bottom: 10px;
+        }
+        .shop-item {
+            background: #1f4068;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 8px;
+            text-align: left;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+        }
+        .shop-item h3 {
+            margin: 0;
+        }
+        .shop-item button {
+            margin-top: 10px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .shop-item button:hover {
+            background-color: #2980b9;
+        }
     </style>
 </head>
 <body>
     <h1>Monster Hunter Clicker</h1>
-    <div id="stats">
-        <p>Gold: <span id="gold">0</span></p>
-        <p>Damage Per Click: <span id="dpc">1</span></p>
-        <p>Monster Health: <span id="health">100</span></p>
-    </div>
-    <div class="health-bar">
-        <div id="health-bar-inner" class="health-bar-inner"></div>
-    </div>
-    <img id="monster" src="https://via.placeholder.com/200" alt="Monster">
-    <div>
-        <button class="button" id="upgrade-dpc">Upgrade Damage (Cost: 10 Gold)</button>
+    <div id="game-container">
+        <div id="stats">
+            <p>Gold: <span id="gold">0</span></p>
+            <p>Damage Per Click: <span id="dpc">1</span></p>
+            <p>Monster Health: <span id="health">100</span></p>
+            <div class="health-bar">
+                <div id="health-bar-inner" class="health-bar-inner"></div>
+            </div>
+            <img id="monster" src="https://via.placeholder.com/250" alt="Monster">
+        </div>
+        <div id="shop">
+            <h2>Shop</h2>
+            <div class="shop-item">
+                <h3>Upgrade Damage</h3>
+                <p>Increase your damage per click. Cost: <span id="upgrade-cost">10</span> Gold</p>
+                <button id="buy-upgrade">Buy</button>
+            </div>
+            <div class="shop-item">
+                <h3>Gold Boost</h3>
+                <p>Earn 2x gold for each monster. Cost: 50 Gold</p>
+                <button id="buy-gold-boost">Buy</button>
+            </div>
+        </div>
     </div>
     <script src="game.js"></script>
 </body>
