--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="google-adsense-account" content="ca-pub-5679528715321899">
     <title>Monster Hunter Clicker</title>
     <style>
-        /* General Styling */
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -20,7 +19,6 @@
             margin-top: 20px;
         }
 
-        /* Game Container */
         #game-container {
             display: flex;
             justify-content: center;
@@ -29,15 +27,11 @@
             padding: 20px;
         }
 
-        /* Stats Section */
-        #stats, #shop {
+        #stats {
             background: #162447;
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        #stats {
             width: 300px;
         }
 
@@ -62,41 +56,32 @@
             cursor: pointer;
         }
 
-        /* Shop Section */
-        #shop h2 {
-            margin-bottom: 10px;
+        #shop-btn {
+            position: fixed;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
         }
 
-        .shop-item {
-            background: #1f4068;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 8px;
-            text-align: left;
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+        #shop-btn img {
+            width: 60px;
         }
 
-        .shop-item h3 {
-            margin: 0;
-        }
-
-        .shop-item button {
-            margin-top: 10px;
+        #subscribe-btn {
+            margin-top: 20px;
             background-color: #3498db;
             color: white;
             border: none;
-            padding: 8px 15px;
+            padding: 10px 20px;
             cursor: pointer;
             border-radius: 5px;
         }
 
-        .shop-item button:hover {
+        #subscribe-btn:hover {
             background-color: #2980b9;
-        }
-
-        #boost-timer {
-            font-size: 1.2em;
-            color: #f1c40f;
         }
     </style>
 </head>
@@ -112,31 +97,12 @@
                 <div id="health-bar-inner" class="health-bar-inner"></div>
             </div>
             <img id="monster" src="https://via.placeholder.com/250" alt="Monster">
-        </div>
-        <div id="shop">
-            <h2>Shop</h2>
-            <div class="shop-item">
-                <h3>Upgrade Damage</h3>
-                <p>Increase your damage per click. Cost: <span id="upgrade-cost">10</span> Gold</p>
-                <button id="buy-upgrade">Buy</button>
-            </div>
-            <div class="shop-item">
-                <h3>Gold Boost</h3>
-                <p>Earn 2x gold for 1 minute. Cost: 50 Gold</p>
-                <button id="buy-gold-boost">Buy</button>
-            </div>
-            <div class="shop-item">
-                <h3>Buy Gold</h3>
-                <p>Buy 100 gold for ₹10</p>
-                <button id="buy-gold">Buy</button>
-            </div>
-            <div class="shop-item">
-                <h3>Watch Ad</h3>
-                <p>Earn 20 gold for watching an ad.</p>
-                <button id="watch-ad">Watch</button>
-            </div>
+            <button id="subscribe-btn">Remove Ads (₹50)</button>
         </div>
     </div>
+    <button id="shop-btn">
+        <img src="https://via.placeholder.com/60?text=Shop" alt="Shop">
+    </button>
     <script src="game.js"></script>
 </body>
 </html>
