--- a/index.html
+++ b/index.html
@@ -150,10 +150,31 @@
         #close-shop:hover {
             background-color: #c0392b;
         }
+
+        /* Ad Placement */
+        #ads-container {
+            text-align: center;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
     <h1>Monster Hunter Clicker</h1>
+
+    <!-- AdSense Banner Ad Above Game -->
+    <div id="ads-container">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5679528715321899" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-format="fluid"
+             data-ad-layout-key="-gw-3+1f-3d+2z"
+             data-ad-client="ca-pub-5679528715321899"
+             data-ad-slot="4584002053"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
     <div id="game-container">
         <div id="stats">
             <p>Gold: <span id="gold">0</span></p>
