--- a/index.html
+++ b/index.html
@@ -197,20 +197,27 @@
     <button id="remove-ads">Remove Ads</button>
 
     <!-- Shop Modal -->
-    <div id="shop-modal">
-        <h2>Shop</h2>
-        <div class="shop-item">
-            <h3>Upgrade Damage</h3>
-            <p>Increase your damage per click. Cost: <span id="upgrade-cost">10</span> Gold</p>
-            <button id="buy-upgrade">Buy</button>
-        </div>
-        <div class="shop-item">
-            <h3>Gold Boost</h3>
-            <p>Earn 2x gold for 1 minute. Cost: 50 Gold</p>
-            <button id="buy-gold-boost">Buy</button>
-        </div>
-        <button id="close-shop">Close</button>
+    <!-- Shop Modal -->
+<div id="shop-modal">
+    <h2>Shop</h2>
+    <div class="shop-item">
+        <h3>Upgrade Damage</h3>
+        <p>Increase your damage per click. Cost: <span id="upgrade-cost">10</span> Gold</p>
+        <button id="buy-upgrade">Buy</button>
     </div>
+    <div class="shop-item">
+        <h3>Gold Boost</h3>
+        <p>Earn 2x gold for 1 minute. Cost: 50 Gold</p>
+        <button id="buy-gold-boost">Buy</button>
+    </div>
+    <div class="shop-item">
+        <h3>Earn Gold by Watching Ad</h3>
+        <p>Watch an ad to earn 50 Gold.</p>
+        <button id="earn-gold-ad">Watch Ad</button>
+    </div>
+    <button id="close-shop">Close</button>
+</div>
+
 
     <script src="game.js"></script>
 </body>
