--- a/index.html
+++ b/index.html
@@ -6,157 +6,231 @@
     <meta name="google-adsense-account" content="ca-pub-5679528715321899">
     <title>Monster Hunter Clicker</title>
     <style>
-        /* General Styling */
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #1a1a2e;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-        }
+    /* General Styling */
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        background-color: #1a1a2e;
+        color: #fff;
+        margin: 0;
+        padding: 0;
+    }
 
-        h1 {
-            margin-top: 20px;
-        }
+    h1 {
+        margin-top: 20px;
+    }
 
-        /* Game Container */
+    /* Game Container */
+    #game-container {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 20px;
+        padding: 20px;
+        flex-wrap: wrap;
+    }
+
+    /* Stats Section */
+    #stats {
+        background: #162447;
+        border-radius: 10px;
+        padding: 20px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        width: 100%;
+        max-width: 300px;
+        margin: 10px;
+    }
+
+    .health-bar {
+        width: 100%;
+        max-width: 300px;
+        height: 20px;
+        background-color: #e74c3c;
+        border-radius: 10px;
+        margin: 10px auto;
+        overflow: hidden;
+    }
+
+    .health-bar-inner {
+        height: 100%;
+        background-color: #2ecc71;
+        width: 100%;
+        transition: width 0.2s;
+    }
+
+    #monster {
+        width: 100%;
+        max-width: 250px;
+        cursor: pointer;
+    }
+
+    /* Shop Button */
+    #shop-button {
+        position: fixed;
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+        background: transparent;
+        border: none;
+        cursor: pointer;
+    }
+
+    #shop-button img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+    }
+
+    /* Subscription Button */
+    #remove-ads {
+        margin-top: 20px;
+        background-color: #f39c12;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+
+    #remove-ads:hover {
+        background-color: #e67e22;
+    }
+
+    /* Popup Modal */
+    #shop-modal {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #1f4068;
+        border-radius: 10px;
+        padding: 20px;
+        width: 100%;
+        max-width: 300px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        z-index: 1000;
+    }
+
+    #shop-modal h2 {
+        margin-bottom: 10px;
+    }
+
+    .shop-item {
+        background: #1b1b3a;
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 8px;
+        text-align: left;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .shop-item h3 {
+        margin: 0;
+    }
+
+    .shop-item button {
+        margin-top: 10px;
+        background-color: #3498db;
+        color: white;
+        border: none;
+        padding: 8px 15px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+
+    .shop-item button:hover {
+        background-color: #2980b9;
+    }
+
+    #close-shop {
+        margin-top: 10px;
+        background-color: #e74c3c;
+        color: white;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+
+    #close-shop:hover {
+        background-color: #c0392b;
+    }
+
+    /* Ad Placement */
+    #ads-container {
+        text-align: center;
+        margin: 20px 0;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
         #game-container {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 20px;
-            padding: 20px;
+            flex-direction: column;
+            align-items: center;
         }
 
-        /* Stats Section */
         #stats {
-            background: #162447;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            width: 300px;
+            width: 80%;
+            max-width: none;
         }
 
         .health-bar {
-            width: 300px;
-            height: 20px;
-            background-color: #e74c3c;
-            border-radius: 10px;
-            margin: 10px auto;
-            overflow: hidden;
-        }
-
-        .health-bar-inner {
-            height: 100%;
-            background-color: #2ecc71;
-            width: 100%;
-            transition: width 0.2s;
+            max-width: 100%;
         }
 
         #monster {
-            width: 250px;
-            cursor: pointer;
-        }
-
-        /* Shop Button */
-        #shop-button {
-            position: fixed;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-            background: transparent;
-            border: none;
-            cursor: pointer;
+            width: 80%;
+            max-width: 200px;
         }
 
         #shop-button img {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
+            width: 50px;
+            height: 50px;
         }
 
-        /* Subscription Button */
-        #remove-ads {
-            margin-top: 20px;
-            background-color: #f39c12;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        #remove-ads:hover {
-            background-color: #e67e22;
-        }
-
-        /* Popup Modal */
         #shop-modal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #1f4068;
-            border-radius: 10px;
-            padding: 20px;
-            width: 300px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
-        }
-
-        #shop-modal h2 {
-            margin-bottom: 10px;
-        }
-
-        .shop-item {
-            background: #1b1b3a;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 8px;
-            text-align: left;
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .shop-item h3 {
-            margin: 0;
+            width: 90%;
+            max-width: none;
         }
 
         .shop-item button {
-            margin-top: 10px;
-            background-color: #3498db;
-            color: white;
-            border: none;
+            padding: 6px 12px;
+        }
+
+        #remove-ads {
             padding: 8px 15px;
-            cursor: pointer;
-            border-radius: 5px;
+        }
+    }
+
+    @media (max-width: 480px) {
+        h1 {
+            font-size: 24px;
         }
 
-        .shop-item button:hover {
-            background-color: #2980b9;
+        #stats {
+            width: 100%;
         }
 
-        #close-shop {
-            margin-top: 10px;
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-            border-radius: 5px;
+        .health-bar {
+            width: 100%;
         }
 
-        #close-shop:hover {
-            background-color: #c0392b;
+        #monster {
+            width: 100%;
         }
 
-        /* Ad Placement */
-        #ads-container {
-            text-align: center;
-            margin: 20px 0;
+        #shop-button img {
+            width: 40px;
+            height: 40px;
         }
-    </style>
+
+        #remove-ads {
+            padding: 6px 12px;
+        }
+    }
+</style>
+
 </head>
 <body>
     <h1>Monster Hunter Clicker</h1>
