--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
             <div class="health-bar">
                 <div id="health-bar-inner" class="health-bar-inner"></div>
             </div>
-            <img id="monster" src="https://via.placeholder.com/250" alt="Monster">
+            <img id="monster" src="monster.png" alt="Monster">
         </div>
     </div>
 
     <!-- Shop Button -->
     <button id="shop-button">
-        <img src="https://via.placeholder.com/60" alt="Shop">
+        <img src="shop.png" alt="Shop">
     </button>
 
     <!-- Remove Ads Button -->
